Rework visual concluido

--- a/Navalha-ui/src/app/app.component.html
+++ b/Navalha-ui/src/app/app.component.html
@@ -1,5 +1,8 @@
 <app-card-header>{{title}}</app-card-header>
-
 <app-menu-bar></app-menu-bar>
 
-<router-outlet />
+<div style="padding-bottom: 100px;">
+  <router-outlet></router-outlet>
+</div>
+
+<app-footer></app-footer>
