--- a/Navalha-ui/src/app/commons/components/card-header/card-header.component.html
+++ b/Navalha-ui/src/app/commons/components/card-header/card-header.component.html
@@ -1,5 +1,10 @@
-<mat-card appearance="outlined" class="card-title">
-  <mat-card-header class="title-center">
-    <mat-card-title><ng-content></ng-content></mat-card-title>
+<mat-card appearance="outlined" class="header-card">
+  <mat-card-header class="header-content">
+    <mat-card-title>
+      <div class="logo-container">
+        <span class="navalha-text">N<span class="kerning-off">a</span>valha</span>
+        <span class="virtual-text">V<span class="shift-up">I</span>RTUA<span class="kerning-off">L</span></span>
+      </div>
+    </mat-card-title>
   </mat-card-header>
 </mat-card>
