--- a/Navalha-ui/src/app/commons/components/menu-bar/menu-bar.component.css
+++ b/Navalha-ui/src/app/commons/components/menu-bar/menu-bar.component.css
@@ -1,23 +1,29 @@
 .menu {
+	position: relative;
+	top: -20px;
 	display: flex;
 	justify-content: center;
-	align-items: center;
-	padding-bottom: 3rem;
-}
+	gap: 2rem;
+	padding: 1rem 3rem;
+	background: rgba(20, 20, 20, 0.596);
+	backdrop-filter: blur(5px);
+	border: 1px solid rgba(124, 124, 124, 0.692);
+	border-radius: 25px 25px 25px 25px; 
+	margin: 0 auto;
+	width: fit-content;
+	box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+	box-shadow: 
+    0 5px 15px rgba(0,0,0,0.3),
+    inset 0 -3px 5px rgba(255, 255, 255, 0.1);
+    border-bottom: 2px solid #b4b4b4a8;
+  }
 
-::ng-deep .menu-title {
-	font-size: 24px;
-	font-weight: bold;
-	padding: 8px 16px;
-	text-align: center;
-	color: white;
-	text-shadow: 1px 1px 2px black;
-	border-bottom: transparent;
-	cursor: pointer;
-	transition: transform 0.3s ease-in-out;
+  .menu:hover {
+	border-color: rgba(255, 255, 255, 0.479); 
+  }
 
-	&:hover {
-		border-bottom: 1px solid rgb(205, 205, 205);
-		transform: scale(1.1);
-	}
-}
+
+  
+
+  
+  
