--- a/Navalha-ui/src/app/schedules/components/schedule-calendar/schedule-calendar.component.css
+++ b/Navalha-ui/src/app/schedules/components/schedule-calendar/schedule-calendar.component.css
@@ -1,47 +1,48 @@
 .calendar-card {
-	width: 30rem;
-	color: #fff;
-	background-color: #121212;
+  width: 30rem;
+  color: #fff;
+  background-color: #12121291;
 }
 
 ::ng-deep .mat-calendar {
   color: white;
+}
 
-  .mat-calendar-header {
-    color: white ;
-  }
+::ng-deep .mat-calendar .mat-calendar-header {
+  color: white;
+}
 
-  .mat-calendar-header .mat-calendar-period-button {
-    color: white ;
-  }
+::ng-deep .mat-calendar .mat-calendar-header .mat-calendar-period-button {
+  color: white;
+}
 
-  .mat-calendar-table-header th {
-		color: rgb(196, 196, 196);
-  }
+::ng-deep .mat-calendar .mat-calendar-table-header th {
+  color: rgb(255, 255, 255);
+}
 
-  .mat-calendar-body-cell-content {
-    color: white;
-  }
+::ng-deep .mat-calendar .mat-calendar-body-cell-content {
+  color: white;
+}
 
-  .mat-calendar-body-selected {
-    background-color: #35096a !important;
-  }
+::ng-deep .mat-calendar .mat-calendar-body-selected {
+  background-color: #22438a !important;
+}
 
-  .mat-calendar-body-today {
-    border-color: #35096a ;
-  }
+::ng-deep .mat-calendar .mat-calendar-body-today {
+  border-color: #ffffff;
 }
 
 ::ng-deep mat-form-field {
   border-radius: 4px;
-
-	.mat-timepicker-input {
-		color: rgb(196, 196, 196) !important;
-	}
-
-  mat-label {
-    background: transparent;
-    padding: 4px 8px;
-		color: rgb(196, 196, 196);
-  }
 }
+
+::ng-deep mat-form-field .mat-timepicker-input {
+  color: rgb(196, 196, 196) !important;
+}
+
+::ng-deep mat-form-field mat-label {
+  background: transparent;
+  padding: 4px 8px;
+  color: rgb(196, 196, 196);
+}
+
